# ros2-2024-2

./: README.md
docs/: frames_2024-03-21_15.40.07.gv  ic2_protocol_print.py
dofbot_ctrl/: package.xml  setup.cfg  setup.py
dofbot_ctrl/dofbot_ctrl/: dofbot_controller.py  dofbot_node.py
dofbot_ctrl/launch/: demo.launch.py
dofbot_description/: CMakeLists.txt  package.xml
dofbot_description/launch/: display.launch.py
dofbot_description/meshes/: yahboom_dofbot.srdf
dofbot_description/rviz/: myconfig.rviz
dofbot_description/urdf/: dofbot_arm.urdf  dofbot_arm_v1.urdf
mypkg_interfaces/: CMakeLists.txt  package.xml
mypkg_interfaces/msg/: MyCustom.msg
mypkg_py/: package.xml  setup.cfg  setup.py
mypkg_py/mypkg_py/: nodo_demo.py
